--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,13 @@
+body {
+  background: #5CE6C2;
+  font-family: arial;
+}
+
+img {
+  width: 400px;
+  padding: 10px;
+}
+
 h1 {
   color: #E82A01;
   text-align: center;
@@ -9,10 +19,15 @@ h2 {
 }
 
 p {
-  font-family: sans-serif;
+  font-size: 20px;
 }
 
 ul {
+  font-size: 20px;
+  line-height: 30px;
+}
+
+ol {
   font-size: 20px;
   line-height: 30px;
 }
